Allow h2o.jar to run on Java 16 [nocheck]